# Dual-Switch

./: .gitignore  CMakeLists.txt  README.md  crd.cpp  crd.h  customIO.cpp  customIO.h  dual_switch.inpt  geometryopt.cpp  geometryopt.h  main.cpp  minimise.cpp  minimise.h  network.cpp  network.h  node.cpp  node.h  simulation.cpp  simulation.h  vectorManip.cpp  vectorManip.h  visualise.py  visualise_subgraph.py
src/: CMakeLists.txt  crd.h  customIO.cpp  dual_switch  dual_switch.inpt  dual_switching.inpt  geometryopt.cpp  minimise.cpp  network.cpp  node.h  simulation.cpp  vectorManip.cpp  visualise.py
